--- a/app/css/main/_buttons.scss
+++ b/app/css/main/_buttons.scss
@@ -9,7 +9,7 @@
   cursor: pointer;
   min-height: 36px;
   min-width: 88px;
-  line-height: 36px;
+  line-height: 100%;
   vertical-align: middle;
   align-items: center;
   text-align: center;
@@ -55,7 +55,7 @@
   cursor: pointer;
   min-height: 36px;
   min-width: 88px;
-  line-height: 36px;
+  line-height: 100%;
   vertical-align: middle;
   align-items: center;
   text-align: center;
@@ -78,7 +78,7 @@
   cursor: pointer;
   min-height: 36px;
   min-width: 88px;
-  line-height: 36px;
+  line-height: 100%;
   vertical-align: middle;
   align-items: center;
   text-align: center;
