--- a/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/editCustomData.html
+++ b/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/editCustomData.html
@@ -27,7 +27,7 @@
                             <tbody>
                             <tr ng-repeat="data in vm.entity" ng-if="data.containerCode == vm.containerId && data.isSys=='1'">
                                 <td>{{$index}}</td>
-                                <td>{{data.attrNameCn}}</td>
+                                <td>{{data.attrNameZh}}</td>
                                 <td>{{data.attrNameEn}}</td>
                                 <td>{{data.attrName}}</td>
                                 <td>{{data.attrType}}</td>
@@ -59,7 +59,7 @@
                                 </td>
                                 <td>
                                     <div class="md-block edit--custom--data--modal__input--box">
-                                        <input class="form-control edit--custom--data--modal__input" ng-model="data.attrNameCn">
+                                        <input class="form-control edit--custom--data--modal__input" ng-model="data.attrNameZh">
                                     </div>
                                 </td>
                                 <td>
