--- a/app/css/main/_gridTemplates.scss
+++ b/app/css/main/_gridTemplates.scss
@@ -179,3 +179,47 @@ div.ui-grid-cell input.edit-input{
   margin-left: 0px;
   margin-top: 18px;
 }
+
+.pagination{
+  margin: 0;
+
+}
+
+.ui-grid-header-cell .sortable{
+  border: none;
+  height: 41px;
+}
+
+.ui-grid-header-cell-primary-focus {
+  background: #3a87ad;
+  color: #ffffff;
+  font-weight: normal;
+  border-bottom: 1px solid #3a87ad;
+  padding: 7px 5px 3px 5px;
+}
+
+.ui-grid-header-cell{
+  &:first-child{
+    border-color: #3a87ad;
+    .ui-grid-cell-contents{
+      background: #3a87ad;
+      md-checkbox:not([disabled]).md-primary:not(.md-checked) .md-icon{
+        border-color: #cccecf ;
+        background: #ffffff;
+        opacity: 1;
+
+      }
+    }
+  }
+}
+.ui-grid-pinned-container.ui-grid-pinned-container-left .ui-grid-header-cell:last-child{
+  border-color: #3a87ad !important;
+}
+
+md-checkbox:not([disabled]).md-primary:not(.md-checked) .md-icon{
+  border-color:#cccecf;
+  background: #ffffff;
+}
+.ui-grid-selection-row-header-buttons{
+  opacity: 1;
+}
