--- a/app/css/main/_select.scss
+++ b/app/css/main/_select.scss
@@ -1,4 +1,6 @@
 @charset "utf-8";
+
+
 md-select{
   margin: 0;
   border: 1px solid #cccccc;
@@ -13,6 +15,8 @@ md-select{
   padding: 2px 2px 2px 6px;
   color: #555555;
   min-width: inherit;
+  min-height: 28px;
+  line-height: 100%;
 }
 md-select.md-default-theme:not([disabled]):focus .md-select-value, md-select:not([disabled]):focus .md-select-value {
   border-bottom-color: transparent !important;
