--- a/app/modules/projectManage/css/_projectManage.scss
+++ b/app/modules/projectManage/css/_projectManage.scss
@@ -135,6 +135,8 @@
           vertical-align: middle;
           width: 300px;
           margin-right: 10px;
+          height: 34px;
+          line-height: 34px;
           &__title{
             display: inline-block;
             font-weight: normal;
@@ -144,18 +146,22 @@
             margin-bottom: 0;
             vertical-align: middle;
           }
-          &__input{
+          &__value{
             display: inline-block;
-            vertical-align: middle;
-            width: 200px;
-          }
-          &__select{
-            display: inline-block;
-            vertical-align: middle;
-            width: 200px;
-            &.ref--rules--short--select{
-              width: auto;
-              max-width: 150px;
+            vertical-align: 1px;
+            &-input{
+              display: inline-block;
+              vertical-align: middle;
+              width: 200px;
+            }
+            &-select{
+              display: inline-block;
+              vertical-align: middle;
+              width: 200px;
+              &.ref--rules--short--select{
+                width: auto;
+                max-width: 150px;
+              }
             }
           }
         }
@@ -172,6 +178,7 @@
 .data--module--new--prompt--wrap{
   width: 100%;
   height: 100%;
+  position: relative;
   .new--prompt--box{
     color: #337ab7;
     background: #ECF6FB;
@@ -412,7 +419,12 @@
           }
           &__value{
             display: inline-block;
+            vertical-align: middle;
             width: 200px;
+            &-input{
+              display: inline-block;
+              vertical-align: 1px;
+            }
           }
           &__sample{
             color: #40b98e;
@@ -420,6 +432,7 @@
           }
           &__select{
             display: inline-block;
+            vertical-align: 1px;
             width: 100%;
           }
           &.select{
@@ -529,4 +542,78 @@
       width: 150px;
     }
   }
+}
+
+.loading{
+
+}
+
+
+/***************************** Dropzone Styling *****************************/
+
+/**
+ * The dnd-list should always have a min-height,
+ * otherwise you can't drop to it once it's empty
+ */
+.nestedDemo .dropzone ul[dnd-list] {
+  margin: 0px;
+  min-height: 42px;
+  padding-left: 0px;
+}
+
+/**
+ * The dnd-list should always have a min-height,
+ * otherwise you can't drop to it once it's empty
+ */
+.simpleDemo ul[dnd-list] {
+  min-height: 42px;
+  padding-left: 0px;
+}
+
+/**
+ * The dndDraggingSource class will be applied to
+ * the source element of a drag operation. It makes
+ * sense to hide it to give the user the feeling
+ * that he's actually moving it.
+ */
+.simpleDemo ul[dnd-list] .dndDraggingSource {
+  display: none;
+}
+
+/**
+ * An element with .dndPlaceholder class will be
+ * added to the dnd-list while the user is dragging
+ * over it.
+ */
+.simpleDemo ul[dnd-list] .dndPlaceholder {
+  background-color: #ddd;
+  display: block;
+  min-height: 42px;
+}
+
+.simpleDemo ul[dnd-list] li {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+}
+.item-li {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+}
+
+/**
+ * Show selected elements in green
+ */
+.simpleDemo ul[dnd-list] li.selected {
+  background-color: #dff0d8;
+  color: #3c763d;
 }
